<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">StoryApp</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Password must be at least 8 characters</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_description">Story Description</string>
    <string name="login">Login</string>
    <string name="register">Don\'t have an account? Register here</string>
    <string name="upload">Upload</string>
    <string name="take_photo">Camera</string>
    <string name="choose_gallery">Gallery</string>
    <string name="add_story">Add Story</string>
    <string name="img_story">Story Image</string>
    <string name="image_login">Login Image</string>
    <string name="title_login_page">Share Your Story Here</string>
    <string name="message_login_page">Please enter your details…</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="img_register">Register Image</string>
    <string name="title_signup_page">Complete the details below…</string>
    <string name="name">Name</string>
    <string name="signup">Sign Up</string>
    <string name="link_login">Already have an account? Log in</string>
    <string name="title_here">Title Here</string>
    <string name="desc_here">Description Here</string>
    <string name="refresh">Refresh</string>
    <string name="logout_confirmation">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error_camera_capture">Failed to capture image from camera</string>
    <string name="error_gallery_selection">Failed to select image from gallery</string>
    <string name="error_permission_required">Camera permission is required to take pictures</string>
    <string name="error_empty_description">Description must not be empty</string>
    <string name="error_no_image_selected">Please select an image first</string>
    <string name="success_story_uploaded">Story uploaded successfully</string>
    <string name="error_generic">An error occurred, please try again</string>
    <string name="title_add_story">Share Story</string>
    <string name="title_detail_story">Story Details</string>
    <string name="error_story_id_not_available">Story ID not available</string>
    <string name="error_empty_email_password">Email and Password must not be empty</string>
    <string name="success_login">Login successful</string>
    <string name="title_home">Home</string>
    <string name="logout">Log Out</string>
    <string name="error_empty_name_email_password">Name, Email, and Password must not be empty</string>
    <string name="success_registration">Registration successful</string>
    <string name="change_language">Change Language</string>
    <string name="language">EN</string>
    <string name="title_activity_maps">Maps Activity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="retry">Retry</string>
</resources>
