<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_baseline_logout"
        android:orderInCategory="102"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_baseline_refresh"
        android:orderInCategory="101"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_language"
        android:title="@string/language"
        android:orderInCategory="100"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_maps_story"
        android:title="@string/logout"
        android:icon="@drawable/ic_baseline_maps"
        android:orderInCategory="99"
        app:showAsAction="always" />
</menu>
