<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddStoryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iv_preview"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:contentDescription="@string/img_story"
                android:scaleType="centerCrop"
                android:src="@drawable/img"
                android:background="@drawable/item_background"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/btn_camera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/take_photo"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/iv_preview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent="0.4"
                android:backgroundTint="@color/navy"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/btn_gallery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/choose_gallery"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/iv_preview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.4"
                android:backgroundTint="@color/navy"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/ed_add_description"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:autofillHints="Deskscription"
                android:hint="@string/hint_description"
                android:inputType="textMultiLine"
                android:minLines="4"
                android:gravity="top"
                android:padding="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/item_background"
                app:layout_constraintTop_toBottomOf="@id/btn_camera"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.8"/>

            <Button
                android:id="@+id/btn_upload"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/upload"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/ed_add_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.8"
                android:backgroundTint="@color/navy"
                android:textColor="@color/white"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <include
        android:id="@+id/loading_overlay"
        layout="@layout/view_progress_bar" />
</androidx.constraintlayout.widget.ConstraintLayout>
